Update teaching section, update coursework

--- a/coursework/index.html
+++ b/coursework/index.html
@@ -61,6 +61,17 @@
 <main class="container-sm container-scale">
   <h2>Coursework</h2>
   <p>Below is a list of all the CS/math major courses I have taken at UC Berkeley:</p>
+  <i>Fall 2022</i>
+  <ul>
+    <li><b>CS 161</b>: Computer Security</li>
+    <li><b>CS 172</b>: Computability and Complexity
+      (<a href="../assets/pdf/CS172_Lecture_Notes.pdf" target="_blank">lecture notes</a>)
+    </li>
+    <li><b>MATH 113</b>: Introduction to Abstract Algebra
+      (<a href="../assets/pdf/MATH113_Lecture_Notes.pdf" target="_blank">lecture notes</a>)
+    </li>
+    <li><b>MATH 116</b>: Cryptography</li>
+  </ul>
   <i>Spring 2022</i>
   <ul>
     <li><b>CS 162</b>: Operating Systems and Systems Programming</li>
