--- a/teaching/index.html
+++ b/teaching/index.html
@@ -59,6 +59,32 @@
 </nav>
 <main class="container-sm container-scale">
   <h2>Teaching</h2>
+  <h5>CS 70 Head uGSI</h5>
+  <ul>
+    <li>
+      <b>Fall 2022:</b>
+      <p>
+        In Fall 2022, I returned as a head undergraduate student instructor for CS70.
+        I continued to teach 2 weekly one-hour discussion sections and held weekly 2-hour office hours,
+        but I also had additional responsibilities managing and running the course
+        alongside the professors.
+      </p>
+      <p>
+        In particular, I was responsible for course logistics, managing TAs and holding weekly staff meetings,
+        communicating with students for various extenuating circumstances and resolving logistical issues.
+        I was also responsible for managing course content, creating weekly discussion worksheets
+        and weekly homeworks for the course. In doing so, I also improved the existing infrastructure
+        for content creation, allowing for long-term storage and iteration of teaching notes
+        for discussions between semesters.
+      </p>
+      <p>
+        Additionally, I continued to improve on general course infrastructure,
+        <a href="https://github.com/smartspot2/edapi">creating a new API integration for Ed</a>
+        (as we moved away from Piazza as the course forum) for automatically creating homework threads,
+        as well as creating a Gradescope autograder for discussion attendance tracking.
+      </p>
+    </li>
+  </ul>
   <h5>CS 70 uGSI</h5>
   <ul>
     <li>
