Add Google analytics

--- a/index.html
+++ b/index.html
@@ -19,13 +19,23 @@
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
-      <!--  Feature detection  -->
+    <!--  Feature detection  -->
     <script src="js/modernizr.js"></script>
     <!--  Handle fallback with browsers that don't support webp  -->
     <script src="js/convert_webp.js"></script>
 
     <!--  Masonry JS  -->
     <script async src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+
+    <!-- Google tag for site analytics (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W6YVCZH4SR"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-W6YVCZH4SR');
+    </script>
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
