Update spring 2023 teaching description

--- a/teaching/index.html
+++ b/teaching/index.html
@@ -71,6 +71,21 @@
       <h5>CS 70 Head uGSI</h5>
       <ul>
         <li>
+          <b>Spring 2023:</b>
+          <p>
+            In Spring 2023, I continued as a head undergraduate student instructor for CS70,
+            with the same responsibilities as the previous semester.
+            I continued to improve course infrastructure, adding direct links to relevant notes
+            on worksheets, and improving the Ed integration I started prior.
+          </p>
+          <p>
+            This semester we also experimented with utilizing
+            <a href="https://scheduler.csmentors.org" target="_blank">CSM Scheduler</a> for attendance tracking,
+            and I was responsible for all of the technical aspects and logistics with using CSM Scheduler
+            (since I was also part of the tech team in <a href="https://csmentors.berkeley.edu">CSM</a> maintaining the site).
+          </p>
+        </li>
+        <li>
           <b>Fall 2022:</b>
           <p>
             In Fall 2022, I returned as a head undergraduate student instructor for CS70.
@@ -88,7 +103,7 @@
           </p>
           <p>
             Additionally, I continued to improve on general course infrastructure,
-            <a href="https://github.com/smartspot2/edapi">creating a new API integration for Ed</a>
+            <a href="https://github.com/smartspot2/edapi" target="_blank">creating a new API integration for Ed</a>
             (as we moved away from Piazza as the course forum) for automatically creating homework threads,
             as well as creating a Gradescope autograder for discussion attendance tracking.
           </p>
