Add CS270 lecture notes, add other coursework

--- a/coursework/index.html
+++ b/coursework/index.html
@@ -71,6 +71,22 @@
     <main class="container-sm container-scale">
       <h2>Coursework</h2>
       <p>Below is a list of all the CS/math major courses I have taken at UC Berkeley:</p>
+      <i>Fall 2023</i>
+      <ul>
+        <li><b>CS 180</b>: Introduction to Computer Vision and Computational Photography</li>
+        <li><b>CS 285</b>: Deep Reinforcement Learning, Decision Making, and Control</li>
+        <li><b>CS 288</b>: Natural Language Processing</li>
+        <li><b>EECS C106A</b>: Introduction to Robotics</li>
+      </ul>
+      <i>Spring 2023</i>
+      <ul>
+        <li><b>CS 164</b>: Programming Languages and Compilers</li>
+        <li><b>CS 184</b>: Foundations of Computer Graphics</li>
+        <li><b>CS 270</b>: Combinatorial Algorithms and Data Structures
+          (<a href="../assets/pdf/CS270_Lecture_Notes.pdf" target="_blank">lecture notes</a>)
+        </li>
+        <li><b>MATH 128A</b>: Numerical Analysis</li>
+      </ul>
       <i>Fall 2022</i>
       <ul>
         <li><b>CS 161</b>: Computer Security</li>
