Replace atomonelight pygments style with github repository

--- a/coursework/latex.html
+++ b/coursework/latex.html
@@ -310,7 +310,8 @@ Before now, I've always manually typeset diagrams using the TikZ and PGFPlots pa
                       to be installed in the system Python interpreter.
                     </p>
                     <p>
-                      The Pygments style used is <a href="../assets/latex/atomonelight.py">my custom port</a>
+                      The Pygments style used is
+                      <a href="https://github.com/smartspot2/pygments-atom-styles">my custom port</a>
                       of the Atom One Light color scheme,
                       and will fallback to the default Pygments style if not installed.
                       Additionally, in homework answer environments, the background color of minted
