--- a/coursework/index.html
+++ b/coursework/index.html
@@ -71,6 +71,12 @@
     <main class="container-sm container-scale">
       <h2>Coursework</h2>
       <p>Below is a list of all the CS/math major courses I have taken at UC Berkeley:</p>
+      <i>Spring 2024</i>
+      <ul>
+        <li><b>CS 168</b>: Introduction to the Internet: Architecture and Protocols</li>
+        <li><b>CS 278</b>: Computational Complexity Theory</li>
+        <li><b>EECS C106B</b>: Robotic Manipulation and Interaction</li>
+      </ul>
       <i>Fall 2023</i>
       <ul>
         <li><b>CS 180</b>: Introduction to Computer Vision and Computational Photography</li>
