--- a/teaching/index.html
+++ b/teaching/index.html
@@ -71,6 +71,14 @@
       <h5>CS 70 Head uGSI</h5>
       <ul>
         <li>
+          <b>Fall 2023, Spring 2024</b>
+          <p>
+            In Fall 2023 and Spring 2024, I continued as a head undergraduate student instructor for CS70,
+            leading the other head TAs in running the course, while continuing with supervising content creation
+            and accommodations requests alongisde the professors.
+          </p>
+        </li>
+        <li>
           <b>Spring 2023:</b>
           <p>
             In Spring 2023, I continued as a head undergraduate student instructor for CS70,
